--- a/style.css
+++ b/style.css
@@ -1,7 +1,59 @@
-.squareButtons{
-
+body{
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .display{
-
+    border: solid black;
+    border-top: none;
+    background-color: lightgray;
+    width: 300px;
+    height: 30px;
 }
+
+.tinyDisplay{
+    width: 300px;
+    margin: 0px;
+    border: solid black;
+    border-bottom: none;
+    background-color: lightgray;
+    font-size: 12px;
+    min-height: 20px;
+}
+
+.calculatorFrame{
+    display: flex;
+    width:306px;
+}
+
+.buttonLayout{
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 60%;
+    height: 200px;
+}
+
+.symbolLayout{
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis:40%;
+}
+
+.squareButtons{
+    width: 33%;
+    margin:0px;
+}
+
+.squareButtons2{
+    width: 50%;
+    margin:0px;
+}
+
+.onOff{
+    width: 100%;
+}
+/* 
+*{
+    border: solid red;
+} */
